完整的实现了作品和用户的图片上传回显功能，在MyMvcConfig中配置了虚拟路径

--- a/share-community/src/main/resources/application.yml
+++ b/share-community/src/main/resources/application.yml
@@ -13,3 +13,6 @@ spring:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     show-sql: true
+  servlet:
+    multipart:
+      max-file-size: 10MB     #前端页面提交单个文件最大长度
